--- a/Frontend/BudgetTrackerUI/src/app/operations-editor/operations-editor.scss
+++ b/Frontend/BudgetTrackerUI/src/app/operations-editor/operations-editor.scss
@@ -9,6 +9,11 @@
     background-color: #fef9c3 !important; 
     border-left: 3px solid #eab308 !important;
   }
+
+  .bg-yellow-100-bis { 
+    background-color: #fef9c3 !important;
+    padding: 0px;
+  }
 }
 
 .ag-cell {
