--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -1,51 +1,53 @@
-<mat-nav-list>
-  <a mat-list-item routerLink="/" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
-    <mat-icon matListItemIcon>home</mat-icon>
-    <span matListItemTitle>Home</span>
-  </a>
+<mat-nav-list class="azure-nav">
 
-  <a mat-list-item routerLink="/dashboardcomptecourant" routerLinkActive="active-link">
-    <mat-icon matListItemIcon>insights</mat-icon>
-    <span matListItemTitle>Dashboard Complet</span>
-  </a>
+  <div class="nav-group">
+    <a mat-list-item routerLink="/" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
+      <mat-icon matListItemIcon>home</mat-icon>
+      <span matListItemTitle>Accueil</span>
+    </a>
+  </div>
 
-  <a mat-list-item routerLink="/cc-evolution" routerLinkActive="active-link">
-    <mat-icon matListItemIcon>stacked_bar_chart</mat-icon>
-    <span matListItemTitle>Dashboard CC</span>
-  </a>
+  <div class="nav-group">
+    <h3 class="group-title">COMPTES COURANTS</h3>
 
-  <mat-expansion-panel [expanded]="true" class="mat-elevation-z0">
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        <mat-icon>edit</mat-icon> <span class="group-title">Comptes courant</span>
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    
-    <mat-nav-list class="sub-menu">
-      <a mat-list-item routerLink="/ListCategories" routerLinkActive="active-link">
-        <mat-icon matListItemIcon>category</mat-icon> <span matListItemTitle>Catégories</span>
-      </a>
-      <a mat-list-item routerLink="/ListRules" routerLinkActive="active-link">
-        <mat-icon matListItemIcon>checklist</mat-icon> <span matListItemTitle>Règles</span>
-      </a>
-      <a mat-list-item routerLink="/operationseditor" routerLinkActive="active-link">
-        <mat-icon matListItemIcon>edit</mat-icon> <span matListItemTitle>Editer les opérations</span>
-      </a>
-      <a mat-list-item routerLink="/statsdb" routerLinkActive="active-link">
-        <mat-icon matListItemIcon>calculate</mat-icon> <span matListItemTitle>Stats BDD</span>
-      </a>
-      <a mat-list-item routerLink="/importfile" routerLinkActive="active-link">
-        <mat-icon matListItemIcon>file_upload</mat-icon> <span matListItemTitle>Importer fichiers</span>
-      </a>
-    </mat-nav-list>
-  </mat-expansion-panel>
+    <a mat-list-item routerLink="/cc-evolution" routerLinkActive="active-link">
+      <mat-icon matListItemIcon>dashboard</mat-icon>
+      <span matListItemTitle>Dashboard</span>
+    </a>
 
-  <a mat-list-item routerLink="/InputPea" routerLinkActive="active-link">
-    <mat-icon matListItemIcon>category</mat-icon>
-    <span matListItemTitle>Saisie Pea</span>
-  </a>
-  <a mat-list-item routerLink="/peawallet" routerLinkActive="active-link">
-    <mat-icon matListItemIcon>account_balance_wallet</mat-icon>
-    <span matListItemTitle>peawallet</span>
-  </a>
+    <a mat-list-item routerLink="/operationseditor" routerLinkActive="active-link">
+      <mat-icon matListItemIcon>receipt_long</mat-icon>
+      <span matListItemTitle>Opérations</span>
+    </a>
+
+    <a mat-list-item routerLink="/importfile" routerLinkActive="active-link">
+      <mat-icon matListItemIcon>file_upload</mat-icon>
+      <span matListItemTitle>Importer fichiers</span>
+    </a>
+
+    <a mat-list-item routerLink="/ListRules" routerLinkActive="active-link">
+      <mat-icon matListItemIcon>receipt_long</mat-icon>
+      <span matListItemTitle>Règles</span>
+    </a>
+
+    <a mat-list-item routerLink="/ListCategories" routerLinkActive="active-link">
+      <mat-icon matListItemIcon>category</mat-icon>
+      <span matListItemTitle>Catégories</span>
+    </a>
+
+  </div>
+
+  <div class="nav-group">
+    <h3 class="group-title">Finance</h3>
+    <a mat-list-item routerLink="/peawallet" routerLinkActive="active-link">
+      <mat-icon matListItemIcon>dashboard</mat-icon>
+      <span matListItemTitle>Dashboard</span>
+    </a>
+
+    <a mat-list-item routerLink="/InputPea" routerLinkActive="active-link">
+      <mat-icon matListItemIcon>account_balance_wallet</mat-icon>
+      <span matListItemTitle>Opérations</span>
+    </a>
+  </div>
+
 </mat-nav-list>
