Passage PEA inputs à NG Grid. Factorisation des formatter/parser

--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -21,7 +21,7 @@
     </a>
 
     <a mat-list-item routerLink="/importfile" routerLinkActive="active-link">
-      <mat-icon matListItemIcon>file_upload</mat-icon>
+      <mat-icon matListItemIcon>cloud_upload</mat-icon>
       <span matListItemTitle>Importer fichiers</span>
     </a>
 
