Refactoriser nom des composants, modifs graphiques

--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -15,22 +15,22 @@
       <span matListItemTitle>Dashboard</span>
     </a>
 
-    <a mat-list-item routerLink="/operationseditor" routerLinkActive="active-link">
+    <a mat-list-item routerLink="/cc-operations" routerLinkActive="active-link">
       <mat-icon matListItemIcon>receipt_long</mat-icon>
       <span matListItemTitle>Opérations</span>
     </a>
 
-    <a mat-list-item routerLink="/importfile" routerLinkActive="active-link">
+    <a mat-list-item routerLink="/cc-input" routerLinkActive="active-link">
       <mat-icon matListItemIcon>cloud_upload</mat-icon>
       <span matListItemTitle>Importer fichiers</span>
     </a>
 
-    <a mat-list-item routerLink="/ListRules" routerLinkActive="active-link">
+    <a mat-list-item routerLink="/cc-rules" routerLinkActive="active-link">
       <mat-icon matListItemIcon>receipt_long</mat-icon>
       <span matListItemTitle>Règles</span>
     </a>
 
-    <a mat-list-item routerLink="/ListCategories" routerLinkActive="active-link">
+    <a mat-list-item routerLink="/cc-categories" routerLinkActive="active-link">
       <mat-icon matListItemIcon>category</mat-icon>
       <span matListItemTitle>Catégories</span>
     </a>
@@ -39,12 +39,12 @@
 
   <div class="nav-group">
     <h3 class="group-title">Finance</h3>
-    <a mat-list-item routerLink="/peawallet" routerLinkActive="active-link">
+    <a mat-list-item routerLink="/pea-dashboard" routerLinkActive="active-link">
       <mat-icon matListItemIcon>dashboard</mat-icon>
       <span matListItemTitle>Dashboard</span>
     </a>
 
-    <a mat-list-item routerLink="/InputPea" routerLinkActive="active-link">
+    <a mat-list-item routerLink="/pea-input" routerLinkActive="active-link">
       <mat-icon matListItemIcon>account_balance_wallet</mat-icon>
       <span matListItemTitle>Opérations</span>
     </a>
