Ajout component Home (vide). Fix des saisie de dates dans pea opérations et cc rules.

--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -10,7 +10,7 @@
   <div class="nav-group">
     <h3 class="group-title">COMPTES COURANTS</h3>
 
-    <a mat-list-item routerLink="/cc-evolution" routerLinkActive="active-link">
+    <a mat-list-item routerLink="/cc-dashboard" routerLinkActive="active-link">
       <mat-icon matListItemIcon>dashboard</mat-icon>
       <span matListItemTitle>Dashboard</span>
     </a>
