Suite renommage de tous les champs de la DB pour snake_case, renommage des table, renommage des class pour ajouter contexte à chaque fois (cc, pea, ...)

--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -30,7 +30,7 @@
       <span matListItemTitle>Règles</span>
     </a>
 
-    <a mat-list-item routerLink="/cc-categories" routerLinkActive="active-link">
+    <a mat-list-item routerLink="/cc-Categories" routerLinkActive="active-link">
       <mat-icon matListItemIcon>category</mat-icon>
       <span matListItemTitle>Catégories</span>
     </a>
