--- a/Frontend/BudgetTrackerUI/src/app/cc-categories/cc-categories.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-categories/cc-categories.html
@@ -8,7 +8,7 @@
       <ag-grid-angular
           style="width: 100%;"
           class="ag-theme-alpine"
-          [rowData]="categories()"
+          [rowData]="CcCategories()"
           [columnDefs]="columnDefs"
           [defaultColDef]="defaultColDef"
           [domLayout]="'autoHeight'"
