Selecteur de dates sous forme de composants, utilisé dans cc-operations

--- a/Frontend/BudgetTrackerUI/src/app/cc-operations/cc-operations.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-operations/cc-operations.html
@@ -17,6 +17,8 @@
         </mat-select>
       </mat-form-field>
 
+      <app-date-filter></app-date-filter>
+
       <mat-form-field appearance="outline" class="flex-grow">
         <mat-label>Rechercher</mat-label>
         <input matInput [(ngModel)]="searchString" (input)="onQuickFilterChanged()">
