Mise en place des environnements. Remise en place de l'export de base de données.

--- a/Frontend/BudgetTrackerUI/src/app/app.html
+++ b/Frontend/BudgetTrackerUI/src/app/app.html
@@ -5,6 +5,12 @@
     </button>
     <span class="app-brand">BudgetTracker</span>
     <span class="spacer"></span>
+    <button mat-icon-button 
+          color="accent" 
+          (click)="onExportDatabase()" 
+          matTooltip="Sauvegarder la base de données (ZIP)">
+    <mat-icon>save_alt</mat-icon>
+  </button>
   </mat-toolbar>
 
   <mat-sidenav-container class="sidenav-container">
