Courbes dashboard CC (optimisation rendu, fix du controller)

--- a/Frontend/BudgetTrackerUI/src/app/cc-dashboard/cc-dashboard.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-dashboard/cc-dashboard.html
@@ -10,6 +10,8 @@
           [series]="chartOptions.series"
           [chart]="chartOptions.chart"
           [xaxis]="chartOptions.xaxis"
+          [dataLabels]="chartOptions.dataLabels"
+          [markers]="chartOptions.markers"
           [stroke]="chartOptions.stroke"
           [colors]="chartOptions.colors"
           [yaxis]="chartOptions.yaxis"
