--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -21,12 +21,12 @@
     </a>
 
     <a mat-list-item routerLink="/cc-input" routerLinkActive="active-link">
-      <mat-icon matListItemIcon>cloud_upload</mat-icon>
+      <mat-icon matListItemIcon>upload_file</mat-icon>
       <span matListItemTitle>Importer fichiers</span>
     </a>
 
     <a mat-list-item routerLink="/cc-rules" routerLinkActive="active-link">
-      <mat-icon matListItemIcon>receipt_long</mat-icon>
+      <mat-icon matListItemIcon>rule</mat-icon>
       <span matListItemTitle>Règles</span>
     </a>
 
