--- a/Frontend/BudgetTrackerUI/src/app/cc-dashboard/cc-dashboard.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-dashboard/cc-dashboard.html
@@ -1,6 +1,5 @@
 <div style="padding: 20px;">
-  <h1>BudgetTracker - Tableau de bord</h1>
-
   <app-cc-evolution-chart [data]="evolutionData()"></app-cc-evolution-chart>
+  <app-pie-chart [data]="categoryData()"></app-pie-chart>
 
 </div>
