Gestion de la mise à jour des composants en cas de zoom sur le graph

--- a/Frontend/BudgetTrackerUI/src/app/cc-dashboard/cc-dashboard.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-dashboard/cc-dashboard.html
@@ -1,5 +1,6 @@
 <div style="padding: 20px;">
-  <app-cc-evolution-chart [data]="evolutionData()"></app-cc-evolution-chart>
+  <app-date-filter></app-date-filter>
+  <app-cc-evolution-chart [data]="evolutionData()" (periodChanged)="onPeriodZoomed($event)"></app-cc-evolution-chart>
   <app-pie-chart [data]="categoryData()"></app-pie-chart>
 
 </div>
