--- a/Frontend/BudgetTrackerUI/src/app/date-filter/date-filter.html
+++ b/Frontend/BudgetTrackerUI/src/app/date-filter/date-filter.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="outline" class="hide-subscript">
+<!-- <mat-form-field appearance="outline" class="hide-subscript">
   <mat-date-range-input [rangePicker]="picker">
     <input matStartDate [(ngModel)]="startDate" placeholder="Début">
     <input matEndDate [(ngModel)]="endDate" placeholder="Fin" (dateChange)="onDateChange()">
@@ -9,4 +9,32 @@
 
 <button mat-icon-button color="warn" (click)="reset()" matTooltip="Réinitialiser">
   <mat-icon>refresh</mat-icon>
-</button>
+</button> -->
+
+<div class="filter-wrapper">
+  <mat-chip-listbox (change)="onChipChange($event)" [value]="currentMode">
+    
+    @if (showLastImportOption) {
+      <mat-chip-option value="last">Dernier import</mat-chip-option>
+    }
+
+    <mat-chip-option value="all">Toutes les opérations</mat-chip-option>
+    <mat-chip-option value="last3">3 derniers mois</mat-chip-option>
+    <mat-chip-option value="last6">6 derniers mois</mat-chip-option>
+    <mat-chip-option value="last12">12 derniers mois</mat-chip-option>
+    <mat-chip-option value="custom">Personnalisé...</mat-chip-option>
+  </mat-chip-listbox>
+
+  @if (currentMode === 'custom') {
+    <div class="custom-dates">
+      <mat-form-field appearance="outline">
+        <mat-label>Début</mat-label>
+        <input matInput type="date" [(ngModel)]="startDate" (change)="emitCustom()">
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Fin</mat-label>
+        <input matInput type="date" [(ngModel)]="endDate" (change)="emitCustom()">
+      </mat-form-field>
+    </div>
+  }
+</div>
